Переделана логика добавления занятий. Добавлена функция удаления занятий. Добавлено логирование

--- a/Berezhetskiy K.T., IVT-2, 2 course, MYPROGRAMM/InformationSystemAUTOSCHOOL.csproj
+++ b/Berezhetskiy K.T., IVT-2, 2 course, MYPROGRAMM/InformationSystemAUTOSCHOOL.csproj
@@ -108,6 +108,7 @@
     <Compile Include="addINSTRUCTOR.Designer.cs">
       <DependentUpon>addINSTRUCTOR.cs</DependentUpon>
     </Compile>
+    <Compile Include="LOGGER.cs" />
     <Compile Include="ModuleINSTRUCTOR.cs">
       <SubType>Form</SubType>
     </Compile>
