Значимые изменения: Улучшена работа функций, проведён bug-fix, улучшено визуальное отображение, исправлена функция логгирования

--- a/Berezhetskiy K.T., IVT-2, 2 course, MYPROGRAMM/Properties/Settings.settings
+++ b/Berezhetskiy K.T., IVT-2, 2 course, MYPROGRAMM/Properties/Settings.settings
@@ -1,7 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)">
-  <Profiles>
-    <Profile Name="(Default)" />
-  </Profiles>
-  <Settings />
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Berezhetskiy_K.T.__IVT_2__2_course__MYPROGRAMM.Properties" GeneratedClassName="Settings">
+  <Profiles />
+  <Settings>
+    <Setting Name="LogFolderPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+  </Settings>
 </SettingsFile>
