--- a/Berezhetskiy K.T., IVT-2, 2 course, MYPROGRAMM/InformationSystemAUTOSCHOOL.csproj
+++ b/Berezhetskiy K.T., IVT-2, 2 course, MYPROGRAMM/InformationSystemAUTOSCHOOL.csproj
@@ -115,6 +115,12 @@
     <Compile Include="ModuleINSTRUCTOR.Designer.cs">
       <DependentUpon>ModuleINSTRUCTOR.cs</DependentUpon>
     </Compile>
+    <Compile Include="registerPANEL.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="registerPANEL.Designer.cs">
+      <DependentUpon>registerPANEL.cs</DependentUpon>
+    </Compile>
     <Compile Include="XLSX_FUNC_CARS.cs" />
     <Compile Include="XLSX_FUNC_INSTRUCTORS.cs" />
     <Compile Include="XLSX_FUNC_LESSONS.cs" />
@@ -163,6 +169,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="registerPANEL.resx">
+      <DependentUpon>registerPANEL.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
